--- a/Estudiantes.tex
+++ b/Estudiantes.tex
@@ -2,15 +2,13 @@
 
 
 
-En el proyecto se incluye un estudiantes de maestría para ser admitido
-en la próxima cohorte y uno de doctorado, que se encuentra realizando
+En el proyecto se incluye un estudiante de doctorado que se encuentra realizando
 el segundo semestre.
 
 Además de participar en todos los pasos del desarrollo de la
-investigación, los estudiantes  tendrán las siguientes
-tareas especificas.
+investigación, el estudiante  tendrán las siguientes
+tareas especificas:
 
-Tareas específicas estudiante de doctorado:
 \begin{itemize}
 \item Establecer los diferentes conjuntos de parámetros $\lambda$ para valores diferentes del la carga $H$ de los operadores correspondientes. En caso de que alguno de ellos resulte con carga $n$ negativa, calcular el acoplamiento diferente de cero que surge después de hacer la rotación del potencial de K\"ahler.
 \item Encontrar la carga fraccionaria óptima de los nuevos flavones para explicar las masas y mezclas de los neutrinos a través del mecanismo seesaw en el modelo estándar supersimétrico con la simetría anómala $U(1)_H$ y violación de número leptónico a través de términos trilineales $\lambda$.
