--- a/Ficha-2011_bsm.tex
+++ b/Ficha-2011_bsm.tex
@@ -101,8 +101,9 @@ extensión mayor de  30 páginas, incluidos anexos y bibliografía
 
 
 \begin{center}
+\Large
   Proyecto de Mediana Cuantía 2011\\
-  \textbf{Fenomenología de modelos supersimétricos con ruptura de paridad R y violación de número leptónico} 
+  \textbf{Fenomenología de modelos con violación de número leptónico} 
 \end{center}
 
 % replace \include by \input at the end to check the pages
