--- a/Marco_teorico.tex
+++ b/Marco_teorico.tex
@@ -12,7 +12,7 @@ las partículas del modelo estándar son pares, mientras que las
 partículas nuevas son impares. Este tipo de simetría garantiza que la
 partícula impar más liviana es estable y, de ser neutra, constituye un
 buen candidato de materia oscura. En el programa computacional
-microMEGAS~\cite{Belanger:2006is} se puede implementar cualquier
+micrOMEGAS~\cite{Belanger:2006is} se puede implementar cualquier
 extensión del modelo estándar que posea una simetría $Z_2$ para
 calcular numéricamente la densidad de reliquia de materia oscura y la
 sección eficaz WIMP--nucleón, relevante para los experimentos de de
@@ -23,7 +23,7 @@ suprimido.
 
 En el caso de supersimetría por ejemplo, todas las interacciones del
 modelo están especificadas por la simetría gauge y el superpotencial,
-que debe ser una función holomórfica de los campos escalares del
+el cual debe ser una función holomórfica de los campos escalares del
 modelo. En el modelo estándar supersimétrico, además de los términos
 del superpotencial que constituyen la semilla del potencial escalar y
 del Lagrangiano de Yukawa, la invarianza gauge permite los siguientes
@@ -53,24 +53,25 @@ supercompañeros no llevan un número cuántico de paridad R, y en su
 lugar llevan una carga horizontal (carga~$H$). Para una artículo de
 revisión ver \cite{Dreiner:2003hw}.  Además, este tipo de modelos
 involucran nuevos campos pesados de FN y, en la realización más
-simple, un supercampo singlete electrodébil $\Phi$ de carga $H$
-$-1$. Términos efectivos invariantes bajo $SU(3)_c\times SU(2)_L\times
-U(1)_Y\times U(1)_H$ que conservan y también que violan paridad R,
-surgen una vez los grados de libertad pesados son integrados debajo la
-escala de los campos FN ($M$), donde $M$ corresponde a la masa de
-Planck. Estos términos involucran factores del tipo $(\Phi/M)^n$,
-donde $n$ esta fijado por las cargas horizontales de los campos
-involucrados, y determina si un término en particular puede o no estar
-presente en el superpotencial. La holomorfía del superpotencial
-prohíbe todos los términos para los cuales $n<0$, y aunque ellos se
-generaran después la ruptura de supersimetría a través el potencial de
-K\"ahler \cite{Giudice:1988yz} estos términos son en general mucho más
-suprimidos que aquellos para los cuales $n\ge0$.  Términos con $n$
-fraccionario están completamente prohibidos. Finalmente, una vez
-$U(1)_H$ se rompe los términos con $n$ positivo mantienen
-acoplamientos de Yukawa determinados, hasta factores de orden uno, por
-$\theta^n=(\langle\phi\rangle/M)^n$. Los acoplamientos de Yukawa del
-modelo estándar provienen típicamente de términos de esta clase.
+simple, un supercampo singlete electrodébil $\Phi$ de carga
+$H=-1$. Términos efectivos invariantes bajo $SU(3)_c\times
+SU(2)_L\times U(1)_Y\times U(1)_H$ que conservan y también que violan
+paridad R, surgen una vez los grados de libertad pesados son
+integrados debajo la escala de los campos FN ($M$), donde $M$
+corresponde a la masa de Planck. Estos términos involucran factores
+del tipo $(\Phi/M)^n$, donde $n$ esta fijado por las cargas
+horizontales de los campos involucrados, y determina si un término en
+particular puede o no estar presente en el superpotencial. La
+holomorfía del superpotencial prohíbe todos los términos para los
+cuales $n<0$, y aunque ellos se generaran después la ruptura de
+supersimetría a través el potencial de K\"ahler \cite{Giudice:1988yz}
+estos términos son en general mucho más suprimidos que aquellos para
+los cuales $n\ge0$.  Términos con $n$ fraccionario están completamente
+prohibidos. Finalmente, una vez $U(1)_H$ se rompe. los términos con $n$
+positivo mantienen acoplamientos de Yukawa determinados, hasta
+factores de orden uno, por $\theta^n=(\langle\phi\rangle/M)^n$. Los
+acoplamientos de Yukawa del modelo estándar provienen típicamente de
+términos de esta clase.
 
 En este tipo de modelos, los ángulos de mezcla de los quarks, las masa
 de los leptones cargados, y las condiciones de cancelación de
@@ -124,8 +125,9 @@ De las diferentes posibilidades se pueden construir modelos: con
 \label{item:3}
 \item Modelos con violación de número bariónico a través de términos
   trilineales que violan $R$--paridad del tipo $\lambda''_{ijk}$. La
-  fenomenología de este tipo de modelos aún no ha sido estudiada en la
-  literatura
+  fenomenología de este tipo de modelos la estámos desarrollando en un
+  proyecto en marcha en el marco de la estrategia de Sostenibilidad
+  del Grupo.
 \label{item:4}
 \end{enumerate}
 En este proyecto pretendemos estudiar de manera sistemática la
@@ -182,9 +184,9 @@ básicamente indistinguible del MSSM. En éste caso los datos de
 detección indirecta de materia oscura a través de rayos cósmicos
 serían la única forma de diferenciar el modelo del MSSM (donde el
 neutralino es el candidato de materia oscura). Sin embargo, si
-consideremos masas de gravitinos más pequeños, aunque ya no podríamos
-explicar bariognesis a través de leptogénesis, recuperamos la
-posibilidad explicar las masas y mezclas de los neutrinos a través de
+consideremos masas de gravitinos más pequeñas, aunque ya no podríamos
+explicar bariogénesis a través de leptogénesis, recuperamos la
+posibilidad de explicar las masas y mezclas de los neutrinos a través de
 los términos bilineales que rompen paridad R~\cite{Hirsch:2005ag}, un
 mecanismo, que a diferencia del seesaw, si se puede verificar en el
 LHC.
@@ -197,6 +199,36 @@ LHC.
   oscilaciones de neutrinos. 
 \end{proyecto}
 
+
+La otra posibilidad de tener términos de violación de número leptónico
+en el superpotencial compatible con la simetría horizontal, es el caso
+\ref{item:3}. donde tenemos un modelo con ruptura trilineal de paridad
+R a través de términos $\lambda$. Esta posibilidad es muy llamativa
+porque da lugar a un candidato de materia oscura que decae sólo
+leptónicamente. Nuestro grupo \cite{Nardi:2008ix} fue uno de los
+primeros en proponer una explicación en términos de materia oscura
+inestable para explicar el exceso de positrones observado por el
+satelite PAMELA en el 2008 \cite{Adriani:2008zr}. Luego hemos
+construido un modelo basado en supersimetría con ruptura de paridad R
+a través de términos trilineales del tipo $\lambda$, caso
+\ref{item:3}, para explicar la preferencia por decaimientos leptónicos
+de la partícula de materia oscura, que en este caso es el
+neutralino \cite{Sierra:2009zq}.
+\begin{proyecto}
+  En este proyecto queremos explorar la posibilidad de explicar
+  también las masas de neutrinos, teniendo al gravitino como materia
+  oscura.
+\end{proyecto}
+En un proyecto en marcha estamos explorando la posibilidad opuesta
+\ref{item:4}., de un candidato de materia oscura que decae sólo
+hadrónicamente. La simetría horizontal garantiza que sólo los
+acoplamientos trilineales de quarks derechos estén permitidos. En
+dicho proyecto hemos extendido el modelo para incluir masas de
+neutrinos. Ésta experiencia nos servirá para hacer las modificaciones
+necesarias al modelo con acoplamientos trilineales leptónicos del tipo
+$\lambda$ para dar cuenta de masas y mezclas para los neutrinos.
+
+
 \begin{darkmatter}
   La metodología desarrollada en el estudio exhaustivo del modelo con
   ruptura bilineal de paridad R la hemos logrado aplicar a otros
@@ -206,11 +238,12 @@ LHC.
   comenzado a explorar modelos que puedan dar cuenta simultáneamente
   de masas de neutrinos y candidatos de materia oscura
   \cite{Hirsch:2005ag,Choi:2010jt,Sierra:2008wj}. En el caso del
-  seesaw radiativo por ejemplo, se implementa una simetría $Z_2$ de
+  seesaw radiativo, donde la violación de número leptónico se da a
+  nivel del potentcial escalar, se implementa una simetría $Z_2$ de
   manera que la masa de neutrinos sólo pueda ser generada
   radiativamente con los neutrinos derechos a la escala del TeV
   garantizando que el modelo pueda comprobarse en el LHC. La misma
-  simetría garantiza que el escalar o a un neutrino derecho puedan ser
+  simetría garantiza que el escalar o un neutrino derecho puedan ser
   buenos candidatos de materia oscura. Finalmente, la estructura
   escalar del modelo permite tener el Higgs mucho más pesado que en el
   modelo estándar de forma compatible con las correcciones
@@ -235,35 +268,6 @@ LHC.
 \end{proyecto}
 \end{darkmatter}
 
-La otra posibilidad de tener términos de violación de número leptónico
-en el superpotencial compatible con la simetría horizontal, es el caso
-\ref{item:3}. donde tenemos un modelo con ruptura trilineal de paridad
-R a través de términos $\lambda$. Esta posibilidad es muy llamativa
-porque da lugar a un candidato de materia oscura que decae sólo
-leptónicamente. Nuestro grupo \cite{Nardi:2008ix} fue uno de los
-primeros en proponer una explicación en términos de materia oscura
-inestable para explicar el exceso de positrones observado por el
-satelite PAMELA en el 2008 \cite{Adriani:2008zr}. Luego hemos
-construido un modelo basado en supersimetría con ruptura de paridad R
-a través de términos trilineales del tipo $\lambda$, caso
-\ref{item:3}, para explicar la preferencia por decaimientos leptónicos
-de la partícula de materia oscura, que en este caso es el
-neutralino \cite{Sierra:2009zq}.
-\begin{proyecto}
-  En este proyecto queremos explorar la posibilidad de explicar
-  también las masas de neutrinos, y el gravitino como materia oscura
-  en el marco del modelo con ruptura de paridad R a través de términos
-  trilineales del tipo $\lambda$.
-\end{proyecto}
-En un proyecto en marcha estamos explorando la posibilidad opuesta
-\ref{item:4}., de un candidato de materia oscura que decae sólo
-hadrónicamente. La simetría horizontal garantiza que sólo los
-acoplamientos trilineales de quarks derechos estén permitidos. En
-dicho proyecto hemos extendido el modelo para incluir masas de
-neutrinos. Ésta experiencia nos servirá para hacer las modificaciones
-necesarias al modelo con acoplamientos trilineales leptónicos del tipo
-$\lambda$ para dar cuenta de masas y mezclas para los neutrinos.
-
 
 \begin{proyecto}
   En términos generales, en este proyecto queremos explorar modelos
@@ -275,14 +279,6 @@ $\lambda$ para dar cuenta de masas y mezclas para los neutrinos.
 
 
 
-\begin{proyecto}
-  Con base en lo planteado anteriormente, lo que proponemos en este
-  proyecto es tratar de responder la siguiente pregunta: ¿Cuáles
-  serían las restricciones impuestas por los recientes y futuros datos
-  de los experimentos de física de partículas sobre modelos que
-  presenten una partícula candidata a materia oscura o que generen
-  masas para los neutrinos?
-\end{proyecto}
 
 %%% Local Variables: 
 %%% mode: latex
