--- a/Metodologia.tex
+++ b/Metodologia.tex
@@ -79,15 +79,15 @@ materia oscura donde las señales están preestablecidas, la
 simulaciones se realizan para poder comparar con los datos obtenidos o
 que se pueden llegar a obtener. En el caso del modelo con ruptura
 bilineal de paridad R, ya se han hecho búsquedas en
-Tevatron~\cite{Brigliadori:2008vf} y se están implementando búsquedas en el LHC
-en grupos de trabajo de ATLAS y LHCb. Además se han establecido la
-posibles señales que se pueden observar en experimentos de detección
-indirecta de materia oscura a través de rayos cósmicos
-\cite{Choi:2010jt}.
+Tevatron~\cite{Brigliadori:2008vf} y se están implementando búsquedas
+con datos reales en el LHC en grupos de trabajo de ATLAS y
+LHCb. Además se han establecido la posibles señales que se pueden
+observar en experimentos de detección indirecta de materia oscura a
+través de rayos cósmicos \cite{Choi:2010jt}.
 
 \begin{proyecto}
   En el marco de este proyecto se simularán dos correlaciones
-  adicionales que existen el modelo con ruptura bilineal de paridad R:
+  adicionales que existen en el modelo con ruptura bilineal de paridad R:
   Cuando el neutralino es la LSP, los decaimientos a tres cuerpos
   mediados por sfermiones con muones y electrones en los estados
   finales, están correlaciones con el ángulo de mezcla solar, y la
@@ -139,14 +139,14 @@ momento sólo tiene un nodo instalado. Toda esta experiencia le ha
 permitido consolidar un grupo de desarrolladores y administradores de
 software científico que ahora conforman La división de ciencias de la
 computación del grupo la cual es ahora la encargada de administrar el
-Centro Regional de Simulación y Cálculo Avanzado (CRESCA).  Una de las
-metas prioritarias es la unificar el poder de computo de los Grupos de
-Investigación de la Universidad en un Grid Institucional que la vez
-éste conectado con Grid-Colombia. En el proyecto solicitamos la
-renovación del contrato al Administrador de Sistemas, que dedicaría
-parte de su tiempo para la administración de CRESCA y la
-implementación del Grid Institucional de computación de alto
-rendimiento.
+Centro Regional de Simulación y Cálculo Avanzado (CRESCA) y ofrece
+servicio de computación científica.  Una de las metas prioritarias es
+la unificar el poder de computo de los Grupos de Investigación de la
+Universidad en un Grid Institucional que la vez éste conectado con
+Grid-Colombia. En el proyecto solicitamos la renovación del contrato
+al Administrador de Sistemas, que dedicaría parte de su tiempo para la
+administración de CRESCA y la implementación del Grid Institucional de
+computación de alto rendimiento.
 
 \begin{ideas}
   
