--- a/Objetivos.tex
+++ b/Objetivos.tex
@@ -28,7 +28,7 @@ candidatos de materia oscura
 \begin{proyecto}
   En el modelo con ruptura bilineal de paridad R con el gravitino como
   la LSP, realizar las simulaciones de las señales del NSLP en el LHC
-  en las regiones del espacio de parámetros donde el gravitinos es un
+  en las regiones del espacio de parámetros donde el gravitino es un
   buen candidato a materia oscura y los términos bilineales pueden
   explicar los datos de oscilaciones de neutrinos.
 \end{proyecto}
