--- a/Planteamiento_del_Problema.tex
+++ b/Planteamiento_del_Problema.tex
@@ -25,7 +25,7 @@ resultados experimentales de física de altas energías. Sin embargo,
 paralelamente se ha venido acumulando evidencia experimental que
 requiere extender el modelo estándar con nuevas partículas. En la
 actualidad hay un gran esfuerzo experimental para explorar en detalle
-todas esas posibilidades. Estamos ahora en una época de efervescencia
+todas estas posibilidades. Estamos ahora en una época de efervescencia
 experimental con detectores de partículas instalados desde las alturas
 de satelites artificiales, hasta las profundidades de laboratorios
 subterráneos a kilometros de profundidad.
@@ -73,7 +73,7 @@ que esperan mejorar los datos actuales de oscilaciones de neutrinos.
 
 
 En éste proyecto se explorarán diferentes extensiones del modelo
-estándar que explican estos datos y se obtendrán predicciones
+estándar que explican estos datos y tienen predicciones
 concretas para los experimentos presentes y futuros mencionados
 anteriormente.
 
@@ -132,6 +132,16 @@ además queremos continuar explorando otros posibles modelos que puedan
 dar cuenta de alguna de las evidencias fenomenológicas (masas de
 neutrinos o materia oscura) que requieren una extensión del modelo
 estándar.
+
+
+\begin{proyecto}
+  Con base en lo planteado anteriormente, lo que proponemos en este
+  proyecto es tratar de responder la siguiente pregunta: ¿Cuáles
+  serían las restricciones impuestas por los recientes y futuros datos
+  de los experimentos de física de partículas sobre modelos que
+  presenten una partícula candidata a materia oscura o que generen
+  masas para los neutrinos?
+\end{proyecto}
  
 \begin{ideas}
   
