--- a/Resultados.tex
+++ b/Resultados.tex
@@ -93,7 +93,9 @@ nuevas al modelo estándar de la partículas elementales. Estos
 resultados se reflejarán en la publicación de al menos dos artículos
 científicos en el área con la participación de un estudiante de
 Doctorado, y en la presentación de los resultados en al menos una
-conferencia internacional.
+conferencia internacional. Además de dar pie a la formulación de
+nuevos proyectos de investigación para ser presentado en convocatorias
+externas.
 
 
 De especial importancia es el nuevo paradigma científico que surgirá
@@ -103,12 +105,12 @@ por el Modelo Estándar, el Higgs, establecería finalmente las teorías
 gauge con rompimiento espontáneo de simetría como el principio
 fundamental para describir las interacciones subatómicas, redondeando
 décadas de desarrollo científico.  El estudio detallado de las
-propiedades del Higgs propiedades, acompañado posiblemente de señales
+propiedades del Higgs, acompañado posiblemente de señales
 de nueva física, podría marcar el camino para encontrar el mecanismo
 de generación de masas y mezclas de neutrinos, así como la
 determinación de la partícula que compone la materia oscura del
 Universo. A más tardar al finalizar ésta década, se espera tener
-respuesta a estos interrogantes. Todo esto tendrá un impacto en la
+respuesta a todos estos interrogantes. Todo esto tendrá un impacto en la
 enseñanza de la física a todos los niveles. Además el descubrimiento
 del Higgs, que sería la primera partícula escalar elemental, daría un
 mejor fundamento teórico a los modelos inflacionarios en cosmología y
@@ -129,17 +131,19 @@ y con los otros grupos teóricos del país, hemos venido colaborando y
 organizando congresos en el área en los últimos años para consolidar
 ésta área de investigación en el país.
 
-El principal aporte un Grupo como el nuestro al desarrollo del país es
-la formación de talento humano con capacidad de hacer investigación
+El principal aporte de un Grupo como el nuestro al desarrollo del país
+es la formación de talento humano con capacidad de hacer investigación
 científica al más alto nivel. Para ello es prioritario que nuestro
 Grupo siga produciendo productos de gran impacto en la comunidad
 mundial de física de altas energías con participación de nuestros
 estudiantes de pregrado y posgrado.  Aunque de momento los doctores
-que formamos son rápidamente reabsorbidos en el ámbito académico, 
+que formamos son rápidamente reabsorbidos en el ámbito académico,
 esperamos que a futuro, como pasa en otros países donde profesionales
 de este tipo son muy apreciados en empresas de innovación tecnológica,
 los nuestros puedan llegar a hacer aportes significativos a otros
-sectores de la sociedad.
+sectores de la sociedad. También hemos logrado capacitar nuestro
+equipo técnico en herramientas de computación científica y de
+administración de redes en Linux.
 
 
 De ser aprobado, éste proyecto nos permitiría participar en esta
